# tg-DA-agent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.py
sandbox/: Dockerfile  run.py
src/: config.py  main.py
src/agent/: executor.py  guardrails.py  llm_client.py  memory.py  prompts.py  react_loop.py  tools.py
src/bot/: handlers.py  keyboards.py  states.py
src/utils/: dataset_io.py  temp_manager.py
